--- a/Python/Rmd/modulo1_tema4_Py_00_indice.Rmd
+++ b/Python/Rmd/modulo1_tema4_Py_00_indice.Rmd
@@ -3,7 +3,7 @@ title: An R Markdown document converted from "Python/modulo1_tema4_Py_00_indice.
 output: html_document
 ---
 
-# TEMA 1.4.2 HERRAMIENTAS DE ANÁLISIS: PROGRAMACIÓN EN PYTHON
+# TEMA 1.4.2 Herramientas de análisis: programación en Python
 
 *Ferran Carrascosa Mallafrè*
 
@@ -13,17 +13,17 @@ output: html_document
 
 *Este notebook forma parte del Máster en Big Data & Data Science de la Universitat de Barcelona - IL3 - FORYMAT.*
 
-# ÍNDICE
+# Índice
 
-### [Introducción](modulo1_tema4_Py.ipynb)
-### [Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb)
-### [Gráficos con matplotlib](modulo1_tema4_Py_20_matplotlib.ipynb)
-### [Colecciones de objetos](modulo1_tema4_Py_30_colec_obj.ipynb)
-- [Listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb)
-- [Numpy](modulo1_tema4_Py_31_numpy.ipynb)
-- [Pandas](modulo1_tema4_Py_32_pandas.ipynb)
-
-### [Control de flujo](modulo1_tema4_Py_40_contr_flujo.ipynb)
-### [Gestión de datos](modulo1_tema4_Py_50_gest_dat.ipynb)
-### [Anexo: README de Python](modulo1_tema4_Py_60_anexo.ipynb)
+### [2.1. Introducción](modulo1_tema4_Py.ipynb)
+### [2.2. Actividad guiada](modulo1_tema4_Py.ipynb)
+### [2.3. Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb)
+### [2.4. Gráficos con matplotlib](modulo1_tema4_Py_20_matplotlib.ipynb)
+### [2.5. Colecciones de objetos](modulo1_tema4_Py_30_colec_obj.ipynb)
+### [2.6. Numpy](modulo1_tema4_Py_31_numpy.ipynb)
+### [2.7. Pandas](modulo1_tema4_Py_32_pandas.ipynb)
+### [2.8. Control de flujo](modulo1_tema4_Py_40_contr_flujo.ipynb)
+### [2.9. Gestión de datos](modulo1_tema4_Py_50_gest_dat.ipynb)
+### [2.10. Ideas clave](modulo1_tema4_Py_60_anexo.ipynb)
+### [2.11. Anexo: README de Python](modulo1_tema4_Py_60_anexo.ipynb)
 
