--- a/R/modulo1_tema4_R_04_contr_flujo.Rmd
+++ b/R/modulo1_tema4_R_04_contr_flujo.Rmd
@@ -15,11 +15,11 @@ options(knitr.kable.NA = '')
 #  Reemplazar > expresiones regulares > ##.*
 ```
 
-## CONTROL DE FLUJO
+## 1.6. Control de flujo
 
 Existen distintos mecanismos para controlar el flujo de un programa. 
 
-### FUNCIONES
+### 1.6.1. Funciones
 
 Las funciones ayudan a automatizar piezas de nuestro código. 
 
@@ -49,7 +49,7 @@ remplazar_na_cero(a)
 
 En los siguientes puntos se presenta como vectorizar funciones sobre objetos R (vectores, listas, data frames...).  
 
-### CONDICIONALES
+### 1.6.2. Condicionales
 
 Una forma de modificar el flujo de un programa, es mediante el uso de expresiones `if-then-else`. Su forma más general sería la siguiente.
 
@@ -99,7 +99,7 @@ raiz[a>=0] <- sqrt(a[a>=0])
 raiz
 ```
 
-### BUCLES
+### 1.6.3. Bucles
 
 Si bien existen bucles de tipo `while()` y `repeat`, el más habitual es `for()`. 
 El siguiente ejemplo muestra como calcular el cuadrado de un vector de números con `for()`.
@@ -115,7 +115,7 @@ for (x in a){
 cuadrados
 ```
 
-La variable `x` recorre los elementos del objeto `a`. El resultado se va acumulando en forma de vector en el objeto `cuadrados`. 
+La columna `x` recorre los elementos del objeto `a`. El resultado se va acumulando en forma de vector en el objeto `cuadrados`. 
 Esta forma de acumular el resultado, es poco eficiente, ya que obliga a ir ampliando la memoria en cada iteración. La forma correcta es, primero reservar el espacio y posteriormente rellenar el objeto:
 
 ```{r}
