--- a/R/modulo1_tema4_R_05_gest_dat.Rmd
+++ b/R/modulo1_tema4_R_05_gest_dat.Rmd
@@ -17,11 +17,11 @@ options(knitr.kable.NA = '')
 paises07 <- as.data.frame(paises %>% filter(anio==2007))
 ```
 
-## GESTIÓN DE DATOS
+## 1.7. Gestión de datos
 
 A continuación, se presentan las funciones para la lectura/escritura de datos, cruce y construcción de tablas resumen. 
 
-### IMPORTAR Y EXPORTAR DATOS
+### 1.7.1 Importar y exportar datos
 
 RStudio aporta facilidades para la importación de datos a través del menú: `File -> Import Data set -> From Text...`
 
@@ -53,7 +53,7 @@ Los parámetros especificados son:
 
 - `dec`: El separador decimal. En Europa se acostumbra a utilizar la coma ",".
 - `sep`: El separador de columnas. Es habitual usar también ";" y "\\t" cuando es un tabulador.
-- `header`: Indica si la primera fila contiene el nombre de las variables o no.
+- `header`: Indica si la primera fila contiene el nombre de las columnas o no.
 
 También es común el uso de `fileEncoding="Latin1"` cuando el fichero se ha creado con Windows y utiliza caracteres especiales de texto (tildes, ...).
 
@@ -154,8 +154,8 @@ fwf_sample <- read.fwf("www/fwf-sample.txt", widths=c(20,10,12)
                      , col.names=c("name", "state", "ssn"))
 ```
 
-- `widths`: Son los anchos de cada variable.
-- `col.names`: Nombres de las variables.
+- `widths`: Son los anchos de cada columna.
+- `col.names`: Nombres de las columnas.
 
 ```{r, eval=FALSE}
 fwf_sample
@@ -172,7 +172,7 @@ options(knitr.kable.NA = '')
 
 ![](www/fwf-sample.png){width=175px}
 
-### CRUCE ENTRE TABLAS
+### 1.7.2 Cruce entre tablas
 
 Para cruzar 2 o más tablas es necesario que éstas compartan un conjunto de índices. 
 
@@ -278,7 +278,7 @@ options(knitr.kable.NA = '')
 
 #### CRUCE POR CAMPOS CLAVE
 
-Un campo clave consiste en una variable que identifica cada registro de forma única.
+Un campo clave consiste en una columna que identifica cada registro de forma única.
 
 Por ejemplo, `pais` y `continente` son campos clave ya que identifican de forma única a sus respectivas entidades en la tabla de `paises`.
 
@@ -331,7 +331,7 @@ options(knitr.kable.NA = '')
 
 ![](www/a_inner.png){width=115px}
 
-R, ha seleccionado `ID` y `X1` como campos clave porque son las variables con nombres coincidentes en ambas tablas. Veremos cómo modificar esto.
+R, ha seleccionado `ID` y `X1` como campos clave porque son las columnas con nombres coincidentes en ambas tablas. Veremos cómo modificar esto.
 
 Otra decisión que R ha tomado, es que **sólo** ha recuperado los **registros** con valores de `ID` y `X1` **compartidos** en ambas tablas. Este comportamiento en el lenguaje SQL, es conocido como *INNER JOIN*.
 
@@ -418,12 +418,12 @@ Ahora ID=3 aparece 2 veces. También aparece ID=4.
 
 ###### DEFINCIÓN DE LAS CLAVES
 
-Para definir las claves del cruce, es necesario pasar como parámetro los nombre de las variables:
+Para definir las claves del cruce, es necesario pasar como parámetro los nombre de las columnas:
 
 - Cuando los nombres de los campos clave son compartidos en ambas tablas, utiliza `by`. 
 - Cuando hay cambios de nombre, utiliza `by.x` y `by.y`
 
-El siguiente ejemplo, realiza un *FULL JOIN* definiendo como clave la variable `ID`.
+El siguiente ejemplo, realiza un *FULL JOIN* definiendo como clave la columna `ID`.
 
 ```{r}
 a_comparte <- merge(a1, a2, all.x=TRUE, by = c("ID")) 
@@ -448,9 +448,9 @@ options(knitr.kable.NA = '')
 
 ![](www/a_comparte.png){width=140px}
 
-R ha añadido el sufijo `.x` y `.y` a `X1`, porque es una variable compartida que ahora no es clave para el cruce. Observa también que ID=3 aparece 2 veces ya que está duplicado en la tabla `a2`.
+R ha añadido el sufijo `.x` y `.y` a `X1`, porque es una columna compartida que ahora no es clave para el cruce. Observa también que ID=3 aparece 2 veces ya que está duplicado en la tabla `a2`.
 
-### RESUMENES DE AGREGADOS 
+### 1.7.3 Resumenes de agregados
 
 R tiene muchas opciones para construir agregados.
 
@@ -483,7 +483,7 @@ options(knitr.kable.NA = '')
 
 ![](www/paisSumm1.png){width=400px}
 
-`summary` en `factor` y `logic` devuelve una tabla de frecuencias, en cambio en `character` no. En `numeric`y `Date` devuelve 6 estadísticos básicos de resumen más el conteo de `NA`s.
+`summary` en `factor` y `logic` devuelve una tabla de frecuencias o conteos, en cambio en `character` no. En `numeric`y `Date` devuelve 6 estadísticos básicos de resumen más el conteo de `NA`s.
 
 #### ESTADÍSTICOS BASICOS
 
@@ -498,7 +498,7 @@ quantile(paises07Summ$pib_per_capita, 0.75, na.rm=TRUE)
 max(paises07Summ$pib_per_capita, na.rm=TRUE)
 ```
 
-El parámetro `na.rm=TRUE` evita que las funciones resumen, devuelvan un NA debido a la presencia de NA s en la variable `pib_por_capita`. Observa como esto sucede en la siguiente función. 
+El parámetro `na.rm=TRUE` evita que las funciones resumen, devuelvan un NA debido a la presencia de NA s en la columna `pib_por_capita`. Observa como esto sucede en la siguiente función. 
 
 ```{r}
 mean(paises07Summ$pib_per_capita)
@@ -523,12 +523,12 @@ options(knitr.kable.NA = '')
 
 ![](www/paisSumm1_1.png){width=250px}
 
-#### TABLAS DE FRECUENCIAS
+#### TABLAS DE FRECUENCIAS O CONTEOS
 
-Para obtener una tabla de frecuencias, utiliza `table()`. Para una variable.
+Para obtener una tabla de frecuencias o conteos, utiliza `table()`. Para una columna
 
 ```{r, eval=FALSE}
-table(paises07Summ$continente)  # una variable
+table(paises07Summ$continente)  # una columna
 ```
 
 ```{r echo=FALSE, results='hide', warning=FALSE}
@@ -544,7 +544,7 @@ options(knitr.kable.NA = '')
 
 ![](www/paisSumm2.png){width=200px}
 
-Tablas cruzadas de dos o más variables.
+Tablas cruzadas de dos o más columnas.
 
 ```{r, eval=FALSE}
 table(paises07Summ$continente,paises07Summ$es_grande)
@@ -565,9 +565,9 @@ options(knitr.kable.NA = '')
 
 > \<sabías que\>Asia es el continente con mayor número de países grandes (de más de 30M de hab.)\</sabías que\>. 
 
-En muchas ocasiones, es útil tramar las variables numéricas en intervalos. En R utiliza `cut()`.
+En muchas ocasiones, es útil tramar las columna numéricas en intervalos. En R utiliza `cut()`.
 
-Vamos a crear la variable nivel de riqueza a partir del pib_per_capita cortando la variable por 1700$ y 18000$.
+Vamos a crear la columna nivel de riqueza a partir del pib_per_capita cortando la columna por 1700$ y 18000$.
 
 ```{r}
 paises07Summ$nivel_de_riqueza <- cut(paises07Summ$pib_per_capita, 
@@ -593,7 +593,7 @@ options(knitr.kable.NA = '')
 
 > \<recuerda\>Para definir los `breaks`, R permite utilizar `-Inf` e `Inf` (infinito) como si fueran números.\</recuerda\>
 
-`cut()` crea un `factor` ordenado a partir de la variable `numeric` con los siguientes levels:
+`cut()` crea un `factor` ordenado a partir de la columna `numeric` con los siguientes levels:
 
 ```{r}
 levels(paises07Summ$nivel_de_riqueza)
@@ -641,7 +641,7 @@ levels(paises07$nivel_de_riqueza) <- c("Pobres","Medios","Ricos")
 
 #### AGREGADOS POR SUBGRUPOS
 
-Además de frecuencias, es necesario saber calcular otros estadísticos básicos para subgrupo de un data frame. Por ejemplo, la media de esperanza de vida y del pib per cápita, así como, el total de población por continente y nivel de riqueza.
+Además de frecuencias o conteos, es necesario saber calcular otros estadísticos básicos para subgrupo de un data frame. Por ejemplo, la media de esperanza de vida y del pib per cápita, así como, el total de población por continente y nivel de riqueza.
 
 ```{r}
 agg1 <- aggregate(paises07[,c("esperanza_de_vida","pib_per_capita")],
@@ -652,9 +652,9 @@ agg2 <- aggregate(paises07[,c("poblacion"),drop=FALSE],
                        , nivel_de_riqueza=paises07$nivel_de_riqueza),sum)
 ```
 
-> \<recuerda\>aggregate() permite calcular un mismo estadístico sobre varias variables segmentando por más de un eje.\</recuerda\>
+> \<recuerda\>aggregate() permite calcular un mismo estadístico sobre varias columnas segmentando por más de un eje.\</recuerda\>
 
-Se juntan ahora los dos agregados con `merge()` y se genera la variable combinada `continente_riqueza`.
+Se juntan ahora los dos agregados con `merge()` y se genera la columna combinada `continente_riqueza`.
 
 ```{r}
 agg3 <- merge(agg1,agg2)
@@ -698,7 +698,7 @@ Como se ha comentado, las funciones apply permiten vectorizar las operaciones de
 
 ##### TAPPLY
 
-Es una alternativa a aggregate() para aplicar una función de agregación sobre una única variable y segmentando por un único eje.
+Es una alternativa a aggregate() para aplicar una función de agregación sobre una única columna y segmentando por un único eje.
 
 ```{r}
 tapply(paises07$esperanza_de_vida,paises07$continente,quantile,probs=0.25)
@@ -746,7 +746,7 @@ El package *dplyr*, al igual que *ggplot2*, está desarrollado por Hadley Wickha
 
 - `arange`: Ordena los registros de un data frame.
 - `filter`: Filtra a partir de un conjunto condiciones lógicas.
-- `select`: Selecciona las variables.
+- `select`: Selecciona las columnas.
 
 > \<ejemplo\>Paises asiaticos con PIB per cápita inferior a 1000 $ en 2007.\</ejemplo\>
 
@@ -769,13 +769,13 @@ options(knitr.kable.NA = '')
 
 ![](www/pais07dplyr.png){width=200px}
 
-Las 3 comparten el hecho que no necesitan de comillas para referirse a las variables. También utilizan el operador `%>%` llamado *pipe*. Éste sustituye el parámetro de entrada de datos. De esta forma, permite escribir las operaciones de izquierda a derecha facilitando así su lectura.
+Las 3 comparten el hecho que no necesitan de comillas para referirse a las columnas. También utilizan el operador `%>%` llamado *pipe*. Éste sustituye el parámetro de entrada de datos. De esta forma, permite escribir las operaciones de izquierda a derecha facilitando así su lectura.
 
 ##### DPLYR: MUTATE, GROUP_BY, SUMMARISE
 
-- `mutate`: Crea o modifica las variables del data frame.
-- `group_by`: Especifica una o varias variables de agrupación.
-- `summarise`: define los agregados de las variables originales.
+- `mutate`: Crea o modifica las columnas del data frame.
+- `group_by`: Especifica una o varias columnas de agrupación.
+- `summarise`: define los agregados de las columnas originales.
 
 > \<ejemplo\>Esperanza de vida y PIB per cápita medio por continente y año.\</ejemplo\>
 
@@ -829,7 +829,7 @@ Adapta los comentarios solicitados en `15_actividad.R`, ejecuta y observa:
 - Se ha utilizado dplyr: arrange,mutate,group_by y summarize.
 - Se ha utilizado geom_path.
 
-### LUBRIDATE: GESTIÓN DE FECHAS Y HORARIOS
+### 1.7.4 Lubridate: gestión de fechas y horarios
 
 Para obtener el día actual con *lubridate* utiliza `today()`, día y hora con now().  
 
